Fix: navbar-toggle fixed so it is not visible when in full window on index and devBlog html

--- a/styles.css
+++ b/styles.css
@@ -35,9 +35,8 @@ body {
 
 .body {
     min-height:100vh;
-    
-
 }
+
 h2 {
     margin: 40px 0px 20px 0px;
     padding: 15px 0;
@@ -354,7 +353,7 @@ footer{
 }
 
 /*Responsive*/
-@media (max-width: 880px){
+@media (max-width: 780px){
     .navbar{
         backdrop-filter: none;
     }
@@ -396,6 +395,13 @@ footer{
     }
     .navbar-toggle.active .bar:nth-child(3) {
         transform: translateY(-8px) rotate(-45deg);
+    }
+
+    .navbar-toggle .fa-bars {
+        font-size: 1.5rem; 
+        height:auto;  
+        width:auto; 
+        color: var(--text-color);
     }
 
     .relic-grid{
